# mandelbrot

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: main.rs  mandelbrot.rs  png_utils.rs  utils.rs
