[package]
name = "mandelbrot"
version = "0.2.1"
authors = ["Golem Factory <contact@golem.network>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
num-complex = "0.2"
png = "0.15"
structopt="0.2"
failure = "0.1.5"
serde={ version = "1.0.99", features = ["derive"] }
serde_json="1.0.40"
gwasm-dispatcher = { git="https://github.com/golemfactory/gwasm-runner.git", branch="master" }
